/******************************************************************************
 * Copyright (c) Huawei Technologies Co., Ltd. 2023. All rights reserved.
 * iSulad licensed under the Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *     http://license.coscl.org.cn/MulanPSL2
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR
 * PURPOSE.
 * See the Mulan PSL v2 for more details.
 * Author: xuxuepeng
 * Create: 2023-02-02
 * Description: provide sandboxer client context and ops
 ******************************************************************************/
#ifndef SANDBOX_CONTROLLER_PROXY_CLIENT_GRPC_GRPC_CTRL_CLIENT_OPS_H
#define SANDBOX_CONTROLLER_PROXY_CLIENT_GRPC_GRPC_CTRL_CLIENT_OPS_H

#ifdef __cplusplus
extern "C" {
#endif

#include "proxy_client.h"

extern ctrl_client_ops_t g_ctrl_grpc_client_ops;

#ifdef __cplusplus
}
#endif

#endif // SANDBOX_CONTROLLER_PROXY_CLIENT_GRPC_GRPC_CTRL_CLIENT_OPS_H
